# hasktrace

./: CHANGELOG.md  README.md  cabal.project  hasktrace.cabal  raytracer-hs.cabal
app/: Geometry.hs  Main.hs  Material.hs  Surface.hs
benchmarks/: Benchmarks.hs  baseline.csv
src/: Trace.hs
src/Trace/: Geometry.hs  Light.hs  Material.hs  Scene.hs  Surface.hs
