cabal-version:      3.4
name:               raytracer-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daan Rijks
maintainer:         daanrijks@pm.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable raytracer-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    default-extensions:
        DerivingStrategies
        , DuplicateRecordFields
        , GADTs
        , GeneralisedNewtypeDeriving
        , NamedFieldPuns
    build-depends:
        base ^>=4.14.2.0
        , JuicyPixels ^>=3.3.5
        , linear ^>=1.21.6
    hs-source-dirs:   app
    default-language: Haskell2010
