cabal-version:      3.4
name:               raytracer-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daan Rijks
maintainer:         daanrijks@pm.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common
    build-depends:
        base ^>=4.14.2.0
        , linear ^>=1.21.6
        , vector ^>=0.12.3.0
        , JuicyPixels ^>=3.3.5

    default-language: Haskell2010
    default-extensions:
        DerivingStrategies
        , DuplicateRecordFields
        , GADTs
        , GeneralisedNewtypeDeriving
        , NamedFieldPuns
        , TupleSections

    ghc-options: -Wall

library
    import: common

    hs-source-dirs: src
    exposed-modules:
        Trace
        , Trace.Geometry
        , Trace.Light
        , Trace.Material
        , Trace.Scene
        , Trace.Surface

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:


executable trace
    import: common

    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        raytracer-hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
